--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
 
 
 
-<title>OuMark.ME</title>
+<title>Projects</title>
 
 <script src="site_libs/header-attrs-2.13/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -245,15 +245,15 @@ $(document).ready(function () {
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
+        
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
         <li>
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="about.html">About</a>
+  <a href="project.html">Project</a>
 </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
@@ -263,12 +263,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">OuMark.ME</h1>
+<h1 class="title toc-ignore">Projects</h1>
 
 </div>
 
 
-<p>Title page here</p>
+<p>Projects</p>
 
 
 
